--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/5 数据查询/5.4 聚合多维分析.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/5 数据查询/5.4 聚合多维分析.md
@@ -1,20 +1,20 @@
 # 5.4 聚合多维分析
 
-在数据库中，ROLLUP、CUBE 和 GROUPING SETS 是用于多维数据聚合的高级 SQL 语句。这些功能显著增强了 GROUP BY 子句的能力，使得用户可以在单一查询中获得多种层次的汇总结果，这在语义上等价于使用 UNION ALL 连接多个聚合语句。
+在数据库中， `ROLLUP` 、 `CUBE` 和 `GROUPING SETS` 是用于多维数据聚合的高级 `SQL` 语句。这些功能显著增强了 `GROUP BY` 子句的能力，使得用户可以在单一查询中获得多种层次的汇总结果，这在语义上等价于使用 `UNION ALL` 连接多个聚合语句。
 
-* ROLLUP：ROLLUP 是一种用于生成层次化汇总的操作。它按照指定的列顺序进行汇总，从最细粒度的数据逐步汇总到最高层次。例如，在销售数据中，可以使用 ROLLUP 按地区、时间进行汇总，得到每个地区每个月的销售额、每个地区的总销售额以及整体总销售额。ROLLUP 适用于需要逐级汇总的场景。
+* `ROLLUP` ： `ROLLUP` 是一种用于生成层次化汇总的操作。它按照指定的列顺序进行汇总，从最细粒度的数据逐步汇总到最高层次。例如，在销售数据中，可以使用 `ROLLUP` 按地区、时间进行汇总，得到每个地区每个月的销售额、每个地区的总销售额以及整体总销售额。 `ROLLUP` 适用于需要逐级汇总的场景。
 
-* CUBE：CUBE 是一种更为强大的聚合操作，它生成所有可能的汇总组合。与 ROLLUP 不同，CUBE 会计算所有维度的子集。例如，对于按产品和地区进行统计的销售数据，CUBE 会计算每个产品在每个地区的销售额、每个产品的总销售额、每个地区的总销售额以及整体总销售额。CUBE 适用于需要全面多维分析的场景，如业务分析和市场调查。
+* `CUBE` ： `CUBE` 是一种更为强大的聚合操作，它生成所有可能的汇总组合。与 `ROLLUP` 不同， `CUBE` 会计算所有维度的子集。例如，对于按产品和地区进行统计的销售数据， `CUBE` 会计算每个产品在每个地区的销售额、每个产品的总销售额、每个地区的总销售额以及整体总销售额。 `CUBE` 适用于需要全面多维分析的场景，如业务分析和市场调查。
 
-* GROUPING SETS：GROUPING SETS 提供了对特定分组集进行聚合的灵活性。它允许用户指定一组列的组合进行独立聚合，而不是像 ROLLUP 和 CUBE 那样生成所有可能的组合。例如，可以定义按地区和时间的特定组合进行汇总，而不需要每个维度的所有组合。GROUPING SETS 适用于需要定制化汇总的场景，提供了灵活的聚合控制。
+* `GROUPING SETS` ： `GROUPING SETS` 提供了对特定分组集进行聚合的灵活性。它允许用户指定一组列的组合进行独立聚合，而不是像 `ROLLUP` 和 `CUBE` 那样生成所有可能的组合。例如，可以定义按地区和时间的特定组合进行汇总，而不需要每个维度的所有组合。 `GROUPING SETS` 适用于需要定制化汇总的场景，提供了灵活的聚合控制。
 
-ROLLUP、CUBE 和 GROUPING SETS 提供了强大的多维数据汇总功能，适用于各种数据分析和报告需求，使得复杂的聚合计算变得更加简便和高效。接下来将详细介绍以上功能使用场景、语法与示例。
+`ROLLUP` 、 `CUBE` 和 `GROUPING SETS` 提供了强大的多维数据汇总功能，适用于各种数据分析和报告需求，使得复杂的聚合计算变得更加简便和高效。接下来将详细介绍以上功能使用场景、语法与示例。
 
 ## 1 ROLLUP
 
 ### 1.1 使用场景
 
-ROLLUP 对于按照时间、地理、类别等层次维度进行汇总时非常有用。例如，查询可以指定 `ROLLUP(year, month, day)` 或者 `(country, Province, city)` 。
+`ROLLUP` 对于按照时间、地理、类别等层次维度进行汇总时非常有用。例如，查询可以指定 `ROLLUP(year, month, day)` 或者 `(country, Province, city)` 。
 
 ### 1.2 语法和示例
 
@@ -67,7 +67,7 @@ ORDER BY
 
 ### 2.1 使用场景
 
-CUBE 最适合用于查询涉及多个独立维度的列，而不是表示单个维度的不同级别的列。例如，常见的使用场景是对月份、地区和产品的所有组合进行汇总。这是三个独立的维度，分析所有可能的小计组合是很常见的。相比之下，显示年、月、日所有可能组合的交叉制表将包含几个不必要的值，因为时间维度中存在自然的层次结构。在大多数分析中，诸如按月日计算的利润之类的小计都是不必要的。相对较少的用户需要询问“全年每月 16 日的总销售额是多少”。
+`CUBE` 最适合用于查询涉及多个独立维度的列，而不是表示单个维度的不同级别的列。例如，常见的使用场景是对月份、地区和产品的所有组合进行汇总。这是三个独立的维度，分析所有可能的小计组合是很常见的。相比之下，显示年、月、日所有可能组合的交叉制表将包含几个不必要的值，因为时间维度中存在自然的层次结构。在大多数分析中，诸如按月日计算的利润之类的小计都是不必要的。相对较少的用户需要询问“全年每月 `16` 日的总销售额是多少”。
 
 ### 2.2 语法和示例
 
@@ -146,19 +146,19 @@ ORDER BY YEAR(d_date), i_category, ca_state;
 
 ## 3 GROUPING FUNCTION
 
-本节将对介绍通过如何解决使用 ROLLUP 和 CUBE 时出现的两个挑战：
+本节将对介绍通过如何解决使用 `ROLLUP` 和 `CUBE` 时出现的两个挑战：
 
 1. 如何以编程方式识别出哪些结果集行代表小计，以及如何准确找到给定小计对应的聚合层级。由于在计算（如总计百分比）时经常需要使用小计，因此，我们需要一种简便的方法来识别这些小计行。
 
-2. 当查询结果同时包含实际存储的 NULL 值和由 ROLLUP 或 CUBE 操作生成的“NULL”值时，会引发另一个问题：如何区分这两种 NULL 值？
+2. 当查询结果同时包含实际存储的 `NULL` 值和由 `ROLLUP` 或 `CUBE` 操作生成的 `NULL` 值时，会引发另一个问题：如何区分这两种 `NULL` 值？
 
-通过 GROUPING、GROUPING_ID、GROUPING SETS 能够有效解决上述的两个挑战。
+通过 `GROUPING` 、 `GROUPING_ID` 、 `GROUPING SETS` 能够有效解决上述的两个挑战。
 
 ### 3.1 GROUPING
 
 1. 原理介绍
 
-    GROUPING 使用单个列作为参数，在遇到由 ROLLUP 或 CUBE 操作创建的 NULL 值时返回 1，即 NULL 表示该行是小计，则 GROUPING 返回 1。任何其他类型的值（包括表数据中本身的 NULL）都返回 0。
+    `GROUPING` 使用单个列作为参数，在遇到由 `ROLLUP` 或 `CUBE` 操作创建的 `NULL` 值时返回 `1` ，即 `NULL` 表示该行是小计，则 `GROUPING` 返回 `1` 。任何其他类型的值（包括表数据中本身的 `NULL` ）都返回 `0` 。
 
     示例如下：
 
@@ -182,11 +182,11 @@ ORDER BY YEAR(d_date), i_category, ca_state;
             year(d_date), month(d_date);
     ```
 
-    * (year(d_date), month(d_date)) 组的 GROUPING 函数结果为 (0,0) 为按照年月聚合的结果
+    * `(year(d_date), month(d_date))` 组的 `GROUPING` 函数结果为 `(0,0)` 为按照年月聚合的结果
 
-    * (year(d_date)) 组的 GROUPING 函数结果为 (0,1)，为按年聚合的结果；
+    * `(year(d_date))` 组的 `GROUPING` 函数结果为 `(0,1)` ，为按年聚合的结果；
 
-    * () 组的 GROUPING 函数结果为 (1,1)，为总计结果。
+    * `()` 组的 `GROUPING` 函数结果为 `(1,1)` ，为总计结果。
 
     查询结果如下：
 
@@ -209,7 +209,7 @@ ORDER BY YEAR(d_date), i_category, ca_state;
 
 2. 使用场景、语法与示例
 
-    GROUPING 函数可以用来过滤结果。示例如下：
+    `GROUPING` 函数可以用来过滤结果。示例如下：
 
     ```sql
     select
@@ -236,7 +236,7 @@ ORDER BY YEAR(d_date), i_category, ca_state;
     order by year(d_date), i_category, ca_state;
     ```
 
-    在 HAVING 过滤条件中使用 GROUPING 函数，仅保留总计销售额，按年度汇总的销售额和按地区汇总的销售额。查询结果如下：
+    在 `HAVING` 过滤条件中使用 `GROUPING` 函数，仅保留总计销售额，按年度汇总的销售额和按地区汇总的销售额。查询结果如下：
 
     ```sql
     +---------------------+------------+----------+------------+  
@@ -251,7 +251,7 @@ ORDER BY YEAR(d_date), i_category, ca_state;
     5 rows in set (0.13 sec)
     ```
 
-    你也可以使用 GROUPING 函数和 IF 函数提高查询的可读性，示例如下：
+    你也可以使用 `GROUPING` 函数和 `IF` 函数提高查询的可读性，示例如下：
 
     ```sql
     select  
@@ -296,11 +296,11 @@ ORDER BY YEAR(d_date), i_category, ca_state;
 
 1. 使用场景
 
-    在数据库中，GROUPING_ID 和 GROUPING 函数都是用于处理多维数据聚合查询（如 ROLLUP 和 CUBE）时的辅助函数，它们帮助用户区分不同层级的聚合结果。如果你想确定某一行的聚合层级，你需要使用 GROUPING 函数对所有的 GROUP BY 列进行计算，因为单列的计算结果无法满足需求。
+    在数据库中， `GROUPING_ID` 和 `GROUPING` 函数都是用于处理多维数据聚合查询（如 `ROLLUP` 和 `CUBE` ）时的辅助函数，它们帮助用户区分不同层级的聚合结果。如果你想确定某一行的聚合层级，你需要使用 `GROUPING` 函数对所有的 `GROUP BY` 列进行计算，因为单列的计算结果无法满足需求。
 
-    GROUPING_ID 函数比 GROUPING 更强大，因为它可以同时对多列进行检测。GROUPING_ID 函数接受多个列作为参数，并返回一个整数，该整数通过二进制位表示多个列的聚合状态。当使用表或物化视图保存计算结果时，使用 GROUPING 表示聚合的不同层级会占用较多的存储空间，在这种场景下，使用 GROUPING_ID 更加合适。
+    `GROUPING_ID` 函数比 `GROUPING` 更强大，因为它可以同时对多列进行检测。 `GROUPING_ID` 函数接受多个列作为参数，并返回一个整数，该整数通过二进制位表示多个列的聚合状态。当使用表或物化视图保存计算结果时，使用 `GROUPING` 表示聚合的不同层级会占用较多的存储空间，在这种场景下，使用 `GROUPING_ID` 更加合适。
 
-    以 CUBE(a, b) 为例，其 GROUPING_ID 可以表示为：
+    以 `CUBE(a, b)` 为例，其 `GROUPING_ID` 可以表示为：
 
     | 聚合层级 | Bit Vector | GROUPING_ID | GROUPING(a) | GROUPING(b) |
     | -- | -- | -- | -- | -- |
@@ -311,7 +311,7 @@ ORDER BY YEAR(d_date), i_category, ca_state;
 
 2. 语法和示例
 
-    示例 SQL 查询如下：
+    示例 `SQL` 查询如下：
 
     ```sql
     SELECT  
@@ -359,9 +359,9 @@ ORDER BY YEAR(d_date), i_category, ca_state;
 
 1. 使用场景
 
-    当需要有选择地指定要创建的组集，可以在 `GROUP BY` 子句中使用 `GROUPING SETS` 表达式。通过这种方法，允许用户跨多个维度进行精确指定，而无需计算整个 CUBE。
+    当需要有选择地指定要创建的组集，可以在 `GROUP BY` 子句中使用 `GROUPING SETS` 表达式。通过这种方法，允许用户跨多个维度进行精确指定，而无需计算整个 `CUBE` 。
 
-    由于 CUBE 查询通常消耗较多资源，当仅对少数几个维度感兴趣时，使用 `GROUPING SETS` 可以提升查询的执行效率。
+    由于 `CUBE` 查询通常消耗较多资源，当仅对少数几个维度感兴趣时，使用 `GROUPING SETS` 可以提升查询的执行效率。
 
 2. 语法和示例
 
@@ -433,7 +433,7 @@ ORDER BY YEAR(d_date), i_category, ca_state;
     16 rows in set (0.11 sec)
     ```
 
-    上面的写法等价于使用 CUBE，但指定了具体的 `grouping_id` ，从而减少了不必要的计算：
+    上面的写法等价于使用 `CUBE` ，但指定了具体的 `grouping_id` ，从而减少了不必要的计算：
 
     ```sql
     SELECT  
@@ -461,11 +461,11 @@ ORDER BY YEAR(d_date), i_category, ca_state;
 
     !!!tip
 
-        使用 CUBE 会计算所有可能的聚合层级（在这个例子中是八种），但实际上你可能只对其中的几种感兴趣。
+        使用 `CUBE` 会计算所有可能的聚合层级（在这个例子中是八种），但实际上你可能只对其中的几种感兴趣。
 
 3. 语义等价
 
-    * GROUPING SETS 与 GROUP BY UNION ALL
+    * `GROUPING SETS` 与 `GROUP BY UNION ALL`
 
         `GROUPING SETS` 语句：
 
@@ -487,7 +487,7 @@ ORDER BY YEAR(d_date), i_category, ca_state;
 
         使用 `UNION ALL` 连接的查询较长，同时需要多次扫描基表，因此在书写和执行上的效率都较低。
 
-    * GROUPING SETS 与 ROLLUP
+    * `GROUPING SETS` 与 `ROLLUP`
 
         `ROLLUP` 是对 `GROUPING SETS` 的扩展。例如：
 
@@ -506,7 +506,7 @@ ORDER BY YEAR(d_date), i_category, ca_state;
         );
         ```
 
-    * GROUPING SETS 与 CUBE
+    * `GROUPING SETS` 与 `CUBE`
 
         `CUBE(a, b, c)` 等价于下面的 `GROUPING SETS` ：
 
@@ -525,4 +525,4 @@ ORDER BY YEAR(d_date), i_category, ca_state;
 
 ## 4 设计文档
 
-详细内容，可前往 Oracle 官网参考 SQL for Aggregation in Data Warehouses
+详细内容，可前往 `Oracle` 官网参考 `SQL for Aggregation in Data Warehouses`
