--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/5 数据查询/5.5 分析函数 (窗口函数）.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/5 数据查询/5.5 分析函数 (窗口函数）.md
@@ -1,6 +1,6 @@
 # 5.5 分析函数 (窗口函数）
 
-分析函数，也称为窗口函数，是一种在 SQL 查询中对数据集中的行进行复杂计算的函数。窗口函数的特点在于，它们不会减少查询结果的行数，而是为每一行增加一个新的计算结果。窗口函数适用于多种分析场景，如计算运行总和、排名以及移动平均等。
+分析函数，也称为窗口函数，是一种在 `SQL` 查询中对数据集中的行进行复杂计算的函数。窗口函数的特点在于，它们不会减少查询结果的行数，而是为每一行增加一个新的计算结果。窗口函数适用于多种分析场景，如计算运行总和、排名以及移动平均等。
 
 下面是一个使用窗口函数计算每个商店的前后三天的销售移动平均值的例子：
 
@@ -56,11 +56,11 @@ FROM
 
 使用分析函数的查询处理可以分为三个阶段。
 
-1. 执行所有的连接、WHERE、GROUP BY 和 HAVING 子句。
+1. 执行所有的连接、 `WHERE` 、 `GROUP BY` 和 `HAVING` 子句。
 
 2. 将结果集提供给分析函数，并进行所有必要的计算。
 
-3. 如果查询的末尾包含 ORDER BY 子句，则处理该子句以实现精确的输出排序。
+3. 如果查询的末尾包含 `ORDER BY` 子句，则处理该子句以实现精确的输出排序。
 
 查询的处理顺序如图所示：
 
@@ -68,7 +68,7 @@ FROM
 
 ### 1.2 结果集分区
 
-分区是在使用 PARTITION BY 子句定义的组之后创建的。分析函数允许用户将查询结果集划分为称为分区的行组。
+分区是在使用 `PARTITION BY` 子句定义的组之后创建的。分析函数允许用户将查询结果集划分为称为分区的行组。
 
 !!! tip
 
@@ -80,13 +80,13 @@ FROM
 
 窗口的大小可以设置为与分区中的所有行一样大，也可以设置为在分区内仅包含一行的滑动窗口。需要注意的是，当窗口靠近分区的边界时，由于边界的限制，计算的范围可能会缩减行数，此时函数仅返回可用行的计算结果。
 
-在使用窗口函数时，当前行会被包含在计算之中。因此，在处理 n 个项目时，应指定为 (n-1)。例如，如果您需要计算五天的平均值，窗口应指定为“rows between 4 preceding and current row”，这也可以简写为“rows 4 preceding”。
+在使用窗口函数时，当前行会被包含在计算之中。因此，在处理 `n` 个项目时，应指定为 `(n-1)` 。例如，如果您需要计算五天的平均值，窗口应指定为 `"rows between 4 preceding and current row"` ，这也可以简写为 `"rows 4 preceding"` 。
 
 ### 1.4 当前行
 
 使用分析函数执行的每个计算都是基于分区内的当前行。当前行作为确定窗口开始和结束的参考点，具体如图所示。
 
-例如，可以使用一个窗口来定义中心移动平均值计算，该窗口包含当前行、当前行之前的 6 行以及当前行之后的 6 行。这样就创建了一个包含 13 行的滑动窗口。
+例如，可以使用一个窗口来定义中心移动平均值计算，该窗口包含当前行、当前行之前的 `6` 行以及当前行之后的 `6` 行。这样就创建了一个包含 `13` 行的滑动窗口。
 
 ![](../../../../assets/images/Doris/window-function-rows-0505d7225ee230aeac864b0754b88270.jpg)
 
@@ -96,7 +96,7 @@ FROM
 
 ### 2.1 NTILE 函数
 
-NTILE 是 SQL 中的一种窗口函数，用于将查询结果集分成指定数量的桶（组），并为每一行分配一个桶号。这在数据分析和报告中非常有用，特别是在需要对数据进行分组和排序时。
+`NTILE` 是 `SQL` 中的一种窗口函数，用于将查询结果集分成指定数量的桶（组），并为每一行分配一个桶号。这在数据分析和报告中非常有用，特别是在需要对数据进行分组和排序时。
 
 1. 函数语法
 
@@ -106,13 +106,13 @@ NTILE 是 SQL 中的一种窗口函数，用于将查询结果集分成指定数
 
     * `num_buckets` ：要将行划分成的桶的数量。
 
-    * `PARTITION BY partition_expression`（可选）：定义如何分区数据。
+    * `PARTITION BY partition_expression` （可选）：定义如何分区数据。
 
     * `ORDER BY order_expression` ：定义如何排序数据。
 
-2. 使用 NTILE 函数
+2. 使用 `NTILE` 函数
 
-    假设有一个包含学生考试成绩的表 `class_student_scores` ，希望将学生按成绩分成 4 个组，每组中的学生数量尽可能均匀。
+    假设有一个包含学生考试成绩的表 `class_student_scores` ，希望将学生按成绩分成 `4` 个组，每组中的学生数量尽可能均匀。
 
     首先，创建并插入数据到 `class_student_scores` 表中：
 
@@ -135,7 +135,7 @@ NTILE 是 SQL 中的一种窗口函数，用于将查询结果集分成指定数
     (2, 8, 'Hannah', 84);
     ```
 
-    然后，使用 NTILE 函数将学生按成绩分成 4 个组：
+    然后，使用 `NTILE` 函数将学生按成绩分成 `4` 个组：
 
     ```sql
     SELECT  
@@ -165,7 +165,7 @@ NTILE 是 SQL 中的一种窗口函数，用于将查询结果集分成指定数
     8 rows in set (0.12 sec)
     ```
 
-    在这个例子中， `NTILE(4)` 函数根据成绩将学生分成了 4 个组（桶），每个组的学生数量尽可能均匀。
+    在这个例子中， `NTILE(4)` 函数根据成绩将学生分成了 `4` 个组（桶），每个组的学生数量尽可能均匀。
 
     !!!tip
 
@@ -173,9 +173,9 @@ NTILE 是 SQL 中的一种窗口函数，用于将查询结果集分成指定数
 
         `NTILE` 函数在每个分区内工作，如果使用 `PARTITION BY` 子句，则每个分区内的数据将分别进行桶分配。
 
-3. 使用 NTILE 和 PARTITION BY
+3. 使用 `NTILE` 和 `PARTITION BY`
 
-    假设按班级对学生进行分组，然后在每个班级内将学生按成绩分成 3 个组，可以使用PARTITION BY和NTILE函数：
+    假设按班级对学生进行分组，然后在每个班级内将学生按成绩分成 `3` 个组，可以使用 `PARTITION BY` 和 `NTILE` 函数：
 
     ```sql
     SELECT  
@@ -206,7 +206,7 @@ NTILE 是 SQL 中的一种窗口函数，用于将查询结果集分成指定数
     8 rows in set (0.05 sec)
     ```
 
-    在这个例子中，学生按班级进行分区，然后在每个班级内按成绩分成 3 个组。每个组的学生数量尽可能均匀。
+    在这个例子中，学生按班级进行分区，然后在每个班级内按成绩分成 `3` 个组。每个组的学生数量尽可能均匀。
 
 ## 3 分析函数
 
@@ -270,7 +270,7 @@ GROUP BY
 24 rows in set (0.13 sec)
 ```
 
-在此示例中，分析函数 SUM 为每一行定义一个窗口，该窗口从分区的开头（UNBOUNDED PRECEDING）开始，默认在当前行结束。在此示例中，需要嵌套使用 SUM，因为需要对本身就是 SUM 的结果执行 SUM。嵌套聚合在分析聚合函数中高频使用。
+在此示例中，分析函数 `SUM` 为每一行定义一个窗口，该窗口从分区的开头（ `UNBOUNDED PRECEDING` ）开始，默认在当前行结束。在此示例中，需要嵌套使用 `SUM` ，因为需要对本身就是 `SUM` 的结果执行 `SUM` 。嵌套聚合在分析聚合函数中高频使用。
 
 ### 3.2 使用分析函数 AVG 计算移动平均值
 
@@ -322,9 +322,9 @@ GROUP BY
 
 !!! waring
 
-    输出数据中 AVG 列的前两行没有计算三天的移动平均值，因为边界数据前面没有足够的行数（在 SQL 中指定的行数为 3）。
+    输出数据中 `AVG` 列的前两行没有计算三天的移动平均值，因为边界数据前面没有足够的行数（在 `SQL` 中指定的行数为 `3` ）。
 
-同时，还可以计算以当前行为中心的窗口聚合函数。例如，此示例计算了 Books 类别的产品 在 2000 年各月销售额的中心移动平均值，具体计算的是当前行前一个月、当前行、以及当前行后一个月的销售总额平均值。
+同时，还可以计算以当前行为中心的窗口聚合函数。例如，此示例计算了 `Books` 类别的产品在 `2000` 年各月销售额的中心移动平均值，具体计算的是当前行前一个月、当前行、以及当前行后一个月的销售总额平均值。
 
 ```sql
 SELECT
@@ -354,7 +354,7 @@ GROUP BY
 
 ## 4 报告函数
 
-报告函数是指每一行的窗口范围都是整个 Partition。报告函数的主要优点是能够在单个查询块中多次传递数据，从而提高查询性能。例如，“对于每一年，找出其销售额最高的商品类别”之类的查询，使用报告函数则不需要进行 JOIN 操作。示例如下：
+报告函数是指每一行的窗口范围都是整个 `Partition` 。报告函数的主要优点是能够在单个查询块中多次传递数据，从而提高查询性能。例如，“对于每一年，找出其销售额最高的商品类别”之类的查询，使用报告函数则不需要进行 `JOIN` 操作。示例如下：
 
 ```sql
 select year,category,total_sum from (
@@ -403,7 +403,7 @@ where total_sum=max_sales;
 2 rows in set (0.12 sec)
 ```
 
-你可以将报告聚合与嵌套查询结合使用，以解决一些复杂的问题，比如查找重要商品子类别中销量最好的产品。以“查找产品销售额占其产品类别总销售额 20% 以上的子类别，并从中选出其中销量最高的五种商品。为例，查询语句如下：
+你可以将报告聚合与嵌套查询结合使用，以解决一些复杂的问题，比如查找重要商品子类别中销量最好的产品。以“查找产品销售额占其产品类别总销售额 `20%` 以上的子类别，并从中选出其中销量最高的五种商品。为例，查询语句如下：
 
 ```sql
 select i_category as categ, i_class as sub_categ, i_item_id
@@ -425,9 +425,9 @@ where sub_cat_sales>0.2*cat_sales and rank_in_line<=5;
 
 ## 5 LAG / LEAD 函数
 
-LAG 和 LEAD 函数适用于值之间的比较。两个函数无需进行自连接，皆可以同时访问表中的多个行，从而可以提高查询处理的速度。具体来说，LAG 函数能够提供对当前行之前给定偏移处的行的访问，而 LEAD 函数则提供对当前行之后给定偏移处的行的访问。
+`LAG` 和 `LEAD` 函数适用于值之间的比较。两个函数无需进行自连接，皆可以同时访问表中的多个行，从而可以提高查询处理的速度。具体来说， `LAG` 函数能够提供对当前行之前给定偏移处的行的访问，而 `LEAD` 函数则提供对当前行之后给定偏移处的行的访问。
 
-以下是一个使用 LAG 函数的 SQL 查询示例，该查询希望选取特定年份（1999, 2000, 2001, 2002）中，每个商品类别的总销售额、前一年的总销售额以及两者之间的差异：
+以下是一个使用 `LAG` 函数的 `SQL` 查询示例，该查询希望选取特定年份（ `1999` ， `2000` ， `2001` ， `2002` ）中，每个商品类别的总销售额、前一年的总销售额以及两者之间的差异：
 
 ```sql
 select year, category, total_sales, before_year_sales, total_sales - before_year_sales from
@@ -474,7 +474,7 @@ where year in (1999, 2000, 2001, 2002)
 
     当使用窗口函数的 `ORDER BY` 子句未能产生数据的唯一排序时，例如当 `ORDER BY` 表达式导致重复值时，行的顺序会变得不确定。这意味着在多次执行查询时，这些行的返回顺序可能会有所不同，进而导致窗口函数返回不一致的结果。
 
-    通过以下示例可以看出，该查询在多次运行时返回了不同的结果。出现不一致性的情况主要由于 `ORDER BY dateid` 没有为 SUM 窗口函数提供产生数据的唯一排序。
+    通过以下示例可以看出，该查询在多次运行时返回了不同的结果。出现不一致性的情况主要由于 `ORDER BY dateid` 没有为 `SUM` 窗口函数提供产生数据的唯一排序。
 
     ```sql
     CREATE TABLE test_window_order
@@ -497,7 +497,7 @@ where year in (1999, 2000, 2001, 2002)
         test_window_order;
     ```
 
-    由于排序列 date_time存在重复值，可能呈现以下两种查询结果：
+    由于排序列 `date_time` 存在重复值，可能呈现以下两种查询结果：
 
     ```sql
     +---------+------------+-------+------+
@@ -547,7 +547,7 @@ where year in (1999, 2000, 2001, 2002)
     3 rows in set (0.03 sec)
     ```
 
-    了解更多有关分析函数信息，可以参考 Oracle 官网文档 SQL for Analysis and Reporting
+    了解更多有关分析函数信息，可以参考 `Oracle` 官网文档 `SQL for Analysis and Reporting`
 
 ## 7 附录
 
