--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/5 数据查询/5.7 自定义函数/5.7.1 别名函数.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/5 数据查询/5.7 自定义函数/5.7.1 别名函数.md
@@ -6,15 +6,15 @@
 
 别名函数和其他自定义函数一样，支持两个作用域： `LOCAL` 和 `GLOBAL` 。
 
-* LOCAL：别名函数注册在当前数据库作用域下。如果需要在其他数据库下使用此别名函数，需要使用它的全限定名称，即 `<所属数据库名>.<函数名>` 。
+* `LOCAL` ：别名函数注册在当前数据库作用域下。如果需要在其他数据库下使用此别名函数，需要使用它的全限定名称，即 `<所属数据库名>.<函数名>` 。
 
-* GLOBAL：别名函数注册在全局作用域下。它可以在任意数据库下通过函数名直接访问。
+* `GLOBAL` ：别名函数注册在全局作用域下。它可以在任意数据库下通过函数名直接访问。
 
 ## 2 使用场景
 
 ### 2.1 为函数起别名
 
-该场景常见于系统迁移，当用户侧存在已有的、目标为其他数据库系统的查询时，可能在查询中存在一些与 Doris 中某个函数功能一致但名称不同的函数。这时，通过为这个函数定义一个新的别名函数，可以在用户侧无感的情况下完成迁移。
+该场景常见于系统迁移，当用户侧存在已有的、目标为其他数据库系统的查询时，可能在查询中存在一些与 `Doris` 中某个函数功能一致但名称不同的函数。这时，通过为这个函数定义一个新的别名函数，可以在用户侧无感的情况下完成迁移。
 
 ### 2.2 简化查询语句
 
@@ -49,4 +49,4 @@ CREATE ALIAS FUNCTION func(INT, INT) WITH PARAMETER(foo, bar) AS foo + bar;
 
 ## 4 更多内容
 
-除别名函数外，Doris 支持 Java UDF、UDTF 功能，详细信息可参考文档 Java UDF。
+除别名函数外， `Doris` 支持 `Java UDF` 、 `UDTF` 功能，详细信息可参考文档 `Java UDF` 。
