--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/5 数据查询/5.9 列转行 (Lateral View).md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/5 数据查询/5.9 列转行 (Lateral View).md
@@ -10,11 +10,11 @@ LATERAL VIEW generator_function ( expression [, ...] ) table_identifier AS colum
 
 ## 2 参数
 
-* generator_function：生成器函数（如 EXPLODE、EXPLODE_SPLIT 等）。
+* `generator_function` ：生成器函数（如 `EXPLODE` 、 `EXPLODE_SPLIT` 等）。
 
-* table_identifier：generator_function 的别名。
+* `table_identifier` ： `generator_function` 的别名。
 
-* column_identifier：列别名，用于输出行。列标识符的数量必须与生成器函数返回的列数匹配。
+* `column_identifier` ：列别名，用于输出行。列标识符的数量必须与生成器函数返回的列数匹配。
 
 ## 3 示例
 
@@ -45,14 +45,14 @@ INSERT INTO person VALUES
     (400, 'Dan', 50, 4, 'Street 4');
 ```
 
-使用 LATERAL VIEW 和 EXPLODE 函数查询 `person` 表：
+使用 `LATERAL VIEW` 和 `EXPLODE` 函数查询 `person` 表：
 
 ```sql
 SELECT * FROM person
 LATERAL VIEW EXPLODE(ARRAY(30, 60)) tableName AS c_age;
 ```
 
-查询结果将包含原始行的每个组合，以及 EXPLODE 函数生成的行：
+查询结果将包含原始行的每个组合，以及 `EXPLODE` 函数生成的行：
 
 ```sql
 +------+------+------+-------+----------+-------+
