--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/5 数据查询/5.10 加密和脱敏.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/5 数据查询/5.10 加密和脱敏.md
@@ -1,10 +1,10 @@
 # 5.10 加密和脱敏
 
-Doris 内置了如下加密和脱敏函数。详细使用，请参考 SQL 手册。
+`Doris` 内置了如下加密和脱敏函数。详细使用，请参考 `SQL` 手册。
 
 ## 1 AES_ENCRYPT
 
-AES 加密函数。该函数与 MySQL 中的 `AES_ENCRYPT` 函数行为一致。默认采用 AES_128_ECB 算法，Padding 模式为 PKCS7。底层使用 OpenSSL 库进行加密。详情可参考 MySQL 官方文档
+`AES` 加密函数。该函数与 `MySQL` 中的 `AES_ENCRYPT` 函数行为一致。默认采用 `AES_128_ECB` 算法， `Padding` 模式为 `PKCS7` 。底层使用 `OpenSSL` 库进行加密。详情可参考 `MySQL` 官方文档
 
 ```sql
 select to_base64(aes_encrypt('text','F3229A0B371ED2D9441B830D21A390C3'));
@@ -19,7 +19,7 @@ select to_base64(aes_encrypt('text','F3229A0B371ED2D9441B830D21A390C3'));
 
 ## 2 AES_DECRYPT
 
-AES 解密函数。该函数与 MySQL 中的 AES_DECRYPT 函数行为一致。默认采用 AES_128_ECB 算法，Padding 模式为 PKCS7。底层使用 OpenSSL 库进行加密。
+`AES` 解密函数。该函数与 `MySQL` 中的 `AES_DECRYPT` 函数行为一致。默认采用 `AES_128_ECB` 算法， `Padding` 模式为 `PKCS7` 。底层使用 `OpenSSL` 库进行加密。
 
 ```sql
 select aes_decrypt(from_base64('wr2JEDVXzL9+2XtRhgIloA=='),'F3229A0B371ED2D9441B830D21A390C3');
@@ -33,7 +33,7 @@ select aes_decrypt(from_base64('wr2JEDVXzL9+2XtRhgIloA=='),'F3229A0B371ED2D9441B
 
 ## 3 MD5
 
-计算 MD5 128-bit
+计算 `MD5 128-bit`
 
 ```sql
 MySQL [(none)]> select md5("abc");
@@ -47,7 +47,7 @@ MySQL [(none)]> select md5("abc");
 
 ## 4 MD5SUM
 
-计算多个字符串 MD5 128-bit
+计算多个字符串 `MD5 128-bit`
 
 ```sql
 MySQL > select md5("abcd");
@@ -69,7 +69,7 @@ MySQL > select md5sum("ab","cd");
 
 ## 5 SM4_ENCRYPT
 
-SM4 加密函数
+`SM4` 加密函数
 
 ```sql
 MySQL > select TO_BASE64(SM4_ENCRYPT('text','F3229A0B371ED2D9441B830D21A390C3'));
@@ -94,7 +94,7 @@ MySQL > select to_base64(SM4_ENCRYPT('text','F3229A0B371ED2D9441B830D21A390C3', 
 
 ## 6 SM3
 
-计算 SM3 256-bit
+计算 `SM3 256-bit`
 
 ```sql
 MySQL > select sm3("abcd");
@@ -108,7 +108,7 @@ MySQL > select sm3("abcd");
 
 ## 7 SM3SUM
 
-计算多个字符串 SM3 256-bit
+计算多个字符串 `SM3 256-bit`
 
 ```sql
 MySQL > select sm3("abcd");
@@ -130,7 +130,7 @@ MySQL > select sm3sum("ab","cd");
 
 ## 8 SHA
 
-使用 SHA1 算法对信息进行摘要处理。
+使用 `SHA1` 算法对信息进行摘要处理。
 
 ```sql
 mysql> select sha("123");
@@ -144,7 +144,7 @@ mysql> select sha("123");
 
 ## 9 SHA2
 
-使用 SHA2 对信息进行摘要处理。
+使用 `SHA2` 对信息进行摘要处理。
 
 ```sql
 mysql> select sha2('abc', 224);
